# repo-gate

./: .gitignore  Cargo.toml  README.md
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.github/workflows/: ci.yml  e2e.yml
crates/repogate-cli/: Cargo.toml
crates/repogate-cli/src/: agent_flow.rs  analyze.rs  cache_cmd.rs  cli.rs  lib.rs  main.rs  progress.rs
crates/repogate-core/: Cargo.toml
crates/repogate-core/src/: claude_schemas.rs  error.rs  lib.rs  model.rs  types.rs
crates/repogate-ingestion/: Cargo.toml
crates/repogate-ingestion/src/: git.rs  language.rs  lib.rs  manifest.rs  walk.rs
crates/repogate-licensing/: Cargo.toml
crates/repogate-licensing/src/: copyleft.rs  detect.rs  lib.rs  report.rs  spdx.rs
crates/repogate-orchestrator/: Cargo.toml
crates/repogate-orchestrator/src/: lib.rs
crates/repogate-orchestrator/src/claude/: invocation.rs  mod.rs  routing.rs  runner.rs  schema.rs  session.rs  stream.rs
crates/repogate-orchestrator/src/job/: budget.rs  checkpoint.rs  gates.rs  mod.rs  state.rs  store.rs
crates/repogate-orchestrator/src/pipeline/: arch_mapping.rs  feature_discovery.rs  llm_adapter.rs  mod.rs  offline.rs  risk_analysis.rs  runner.rs  synthesis.rs
crates/repogate-orchestrator/tests/: e2e_pipeline.rs
crates/repogate-report/: Cargo.toml
crates/repogate-report/src/: assembly.rs  json.rs  lib.rs  markdown.rs  naming.rs  pdf.rs
crates/repogate-scoring/: Cargo.toml
crates/repogate-scoring/src/: engine.rs  gating_signal.rs  lib.rs  license_risk.rs  report.rs  tier.rs
crates/repogate-server/: Cargo.toml
crates/repogate-server/migrations/: 0001_jobs.sql  0002_module_assessments.sql  0003_checkpoints.sql  0004_reports.sql  0005_cache.sql
crates/repogate-server/src/: http.rs  lib.rs  main.rs
crates/repogate-server/src/db/: cache.rs  checkpoint_store.rs  job_store.rs  mod.rs  module_store.rs  pool.rs
docs/: architecture.md  getting-started.md  initial_spec.md
docs/adr/: ADR-001-rust-primary-language.md  ADR-002-claude-code-analysis-engine.md  ADR-003-headless-claude-code-invocation.md  ADR-004-rust-native-orchestration-typescript-scope.md  ADR-005-git-ingestion-and-tree-walking.md  ADR-006-license-dependency-analysis.md  ADR-007-schema-enforced-structured-output.md  ADR-008-deep-traversal-map-reduce.md  ADR-009-multi-phase-pipeline-crash-recovery.md  ADR-010-commercial-value-scoring-model.md  ADR-011-assessment-output-formats.md  ADR-012-model-routing.md  ADR-013-token-budget-enforcement.md  ADR-014-persistence-sqlx-sqlite-postgres.md  ADR-015-web-api-layer-axum-nextjs.md  ADR-016-closing-analysis-fidelity-gaps.md  ADR-017-recalibrate-gating-score.md  README.md
docs/ddd/: README.md  architecture-mapping.md  assessment-orchestration.md  commercial-valuation.md  functionality-discovery.md  gating-strategy.md  license-compliance.md  report-delivery.md  repository-ingestion.md  risk-analysis.md  user-workflow.md
docs/prompts/: ALL-PROMPTS.md  BUILD-MANIFEST.md  P01-workspace-skeleton.md  P02-core-types-schemas.md  P03-ingestion-git-walk.md  P04-deps-sbom.md  P05-licensing.md  P06-claude-driver.md  P07-state-machine-budget.md  P08-arch-mapping.md  P09-feature-discovery.md  P10-scoring-engine.md  P11-synthesis-risk.md  P12-report-assembly.md  P13-sqlx-stores.md  P14-cli.md  P15-server.md  P16-web-dashboard.md  P17-e2e-repomix.md  README.md
repogate-web/: next.config.js  package-lock.json  package.json
repogate-web/src/app/: layout.tsx  page.tsx
repogate-web/src/app/jobs/: page.tsx
repogate-web/src/components/: ReportViewer.tsx
repogate-web/src/lib/: api.ts
tests/fixtures/: canned_module_assessment.json  canned_risk_output.json  canned_synthesis_output.json
