[workspace]
members = [
    "crates/repogate-core",
    "crates/repogate-ingestion",
    "crates/repogate-licensing",
    "crates/repogate-orchestrator",
    "crates/repogate-scoring",
    "crates/repogate-report",
    "crates/repogate-cli",
    "crates/repogate-server",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "postgres"] }
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
ignore = "0.4"
blake3 = "1.5"
uuid = { version = "1.10", features = ["v4"] }
tempfile = "3.12"
