[package]
name = "repogate-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "repogate"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
