[package]
name = "repogate-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "repogate_cli"
path = "src/lib.rs"

[[bin]]
name = "repogate"
path = "src/main.rs"

[dependencies]
repogate-core = { path = "../repogate-core" }
repogate-ingestion = { path = "../repogate-ingestion" }
repogate-licensing = { path = "../repogate-licensing" }
repogate-orchestrator = { path = "../repogate-orchestrator" }
repogate-report = { path = "../repogate-report" }
repogate-server = { path = "../repogate-server" }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
