[package]
name = "repogate-licensing"
version = "0.1.0"
edition = "2021"

[dependencies]
repogate-core = { path = "../repogate-core" }
repogate-ingestion = { path = "../repogate-ingestion" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
spdx = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
