[package]
name = "repogate-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
repogate-core = { path = "../repogate-core" }
repogate-ingestion = { path = "../repogate-ingestion" }
repogate-licensing = { path = "../repogate-licensing" }
repogate-scoring = { path = "../repogate-scoring" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }

[features]
# Propagates the askalono SPDX corpus to the licensing crate (ADR-016 R3).
askalono-corpus = ["repogate-licensing/askalono-corpus"]

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
repogate-core = { path = "../repogate-core" }
repogate-ingestion = { path = "../repogate-ingestion" }
serde_json = { workspace = true }
