[package]
name = "repogate-report"
version = "0.1.0"
edition = "2021"

[dependencies]
repogate-core = { path = "../repogate-core" }
repogate-ingestion = { path = "../repogate-ingestion" }
repogate-orchestrator = { path = "../repogate-orchestrator" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
minijinja = { workspace = true }
pulldown-cmark = "0.13.4"

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
