[package]
name = "repogate-scoring"
version = "0.1.0"
edition = "2021"

[dependencies]
repogate-core = { path = "../repogate-core" }
repogate-licensing = { path = "../repogate-licensing" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
